# Coffee-Machine

./: README.md  main.py  money_machine.py  pyproject.toml
installer/: coffee-machine.iss
src/: components.py  images.py  layouts.py  main.py  main_ui.py  menu.py  notifications.py  setup.py  test.py  text.py  utilities.py  video_test.py
tools/: build_app.py
